--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "scripts": {
+  "start": "node server.js"
   }
 }
