--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "node-localstorage": "^3.0.5",
     "socket.io": "^4.7.2"
   },
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js"
   }
 }
